--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "next": "^13.0.5",
+    "next-google-fonts": "^2.2.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.2",
